OPL-5762: Ecr Vulnerabilities Fix