@@ -1,10 +1,10 @@
-FROM gradle:6.3.0-jdk8 AS build
+FROM gradle:6.9.0-jdk11 AS build
 ENV DOCKER_ENV=dev
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle clean build --no-daemon
 
-FROM openjdk:8-jre-slim
+FROM openjdk:11-jre-slim
 RUN apt-get update && apt-get install -y curl dnsutils iputils-ping
 RUN mkdir /app
 COPY --from=build /home/gradle/src/build/libs/*.jar /apps/OpsERA/components/argo-integrator/argo-integrator.jar
@@ -12,4 +12,4 @@ ENV TINI_VERSION v0.19.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
 RUN chmod +x /tini
 EXPOSE 9096
-ENTRYPOINT exec /tini -- java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dspring.profiles.active=$DOCKER_ENV -Djava.security.egd=file:/dev/./urandom -jar /apps/OpsERA/components/argo-integrator/argo-integrator.jar
+ENTRYPOINT exec /tini -- java -XX:+UseContainerSupport -XX:MaxRAMPercentage=80.0 -Dspring.profiles.active=$DOCKER_ENV -Djava.security.egd=file:/dev/./urandom -jar /apps/OpsERA/components/argo-integrator/argo-integrator.jar
